--- a/main.css
+++ b/main.css
@@ -1,14 +1,15 @@
 /* copy paste for pictureShow */
+/*from: http://mattbango.com/notebook/code/hover-zoom-effect-with-jquery-and-css*/
 
 /* --- Container configuration ---------------------------------------------------------- */
 .viewport {
     border: 3px solid #eee;
     float: left;
-    height: 299px;
-    margin: 0 9px 9px 0;
+    height: 420px;
+    margin: 0px 14px 0px 14px;
     overflow: hidden;
     position: relative;
-    width: 450px;
+    width: 458px;
 }
 
 /* This is so that the 2nd thumbnail in each row fits snugly. You will want to add a similar
@@ -24,11 +25,11 @@
 }
 
 .viewport .aa img {
-    height: 332px;
+    height: 440px;
     left: -20px;
     position: relative;
     top: -20px;
-    width: 500px;
+    width: 478px;
 }
 
 /* --- Label configuration -------------------------------------------------------------- */
