--- a/main.css
+++ b/main.css
@@ -12,6 +12,39 @@ a {
     background-color: white;
 }
 
+/* !important so mod colors don't show when changing theme
+to dark, before required refresh. */
+/*channel rank = 3-254*/
+.shout {
+    font-size:110%;
+    color:teal;
+}
+
+.userlist_owner {
+    color: SeaGreen !important;
+    font-weight:normal !important;
+}
+
+.userlist_op {
+    color: SeaGreen !important;
+    font-weight:normal !important;
+}
+
+.userlist_item {
+    color:SeaGreen !important;
+    font-weight:normal;
+}
+
+.profile-image {
+    width: 150px;
+    height: 150px;
+}
+
+.profile-box {
+    max-width: 162px;
+    color: black;
+}
+
 /* pictureShow region */
 /*from: http://mattbango.com/notebook/code/hover-zoom-effect-with-jquery-and-css*/
 
