--- a/main.css
+++ b/main.css
@@ -13,6 +13,12 @@ a {
     background-color: white;
 }
 
+#pictureChange {
+    margin: 0px;
+    width: 25%;
+    float: left;
+}
+
 /* !important so mod colors don't show when changing theme
 to dark, before required refresh. */
 /*channel rank = 3-254*/
